// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.changeProposalAnalysis should analyse successfully the proposal's analysis 1`] = `
Object {
  "analyseProposalAnalysis": Object {
    "analysis": Object {
      "comment": "La proposition remplie bien nos critères de séléction",
      "id": Any<String>,
      "responses": Array [
        Object {
          "formattedValue": "Je suis la réponse a la question",
        },
        Object {
          "formattedValue": "premier choix",
        },
        Object {
          "formattedValue": "",
        },
      ],
      "state": "FAVOURABLE",
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.changeProposalAnalysis should change successfully the newly created analysis with missing responses to required questions 1`] = `
Object {
  "changeProposalAnalysis": Object {
    "analysis": Object {
      "comment": null,
      "id": Any<String>,
      "responses": Array [
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": "",
        },
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": "",
        },
        Object {
          "formattedValue": "",
        },
        Object {
          "formattedValue": "",
        },
        Object {
          "formattedValue": "",
        },
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": null,
        },
      ],
      "updatedBy": Object {
        "id": "VXNlcjp1c2VySnBlYw==",
      },
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.changeProposalAnalysis should create successfully the proposal's analysis 1`] = `
Object {
  "changeProposalAnalysis": Object {
    "analysis": Object {
      "comment": "Validons ensemble cette proposition !",
      "id": Any<String>,
      "responses": Array [
        Object {
          "formattedValue": "Oui biensur.",
        },
        Object {
          "formattedValue": "premier choix",
        },
        Object {
          "formattedValue": "",
        },
      ],
      "updatedBy": Object {
        "id": "VXNlcjp1c2VyQW5hbHlzdA==",
      },
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.changeProposalAnalysis should not analyse the analysis with missing required responses to required questions 1`] = `
Object {
  "analyseProposalAnalysis": Object {
    "analysis": null,
    "errorCode": "INVALID_FORM",
  },
}
`;

exports[`mutations.changeProposalAnalysis should not create the proposal's analysis if the decision has already been given 1`] = `
Object {
  "changeProposalAnalysis": Object {
    "analysis": null,
    "errorCode": "DECISION_ALREADY_GIVEN",
  },
}
`;

exports[`mutations.changeProposalAnalysis should not create the proposal's analysis when authenticated as user 1`] = `
Object {
  "changeProposalAnalysis": Object {
    "analysis": null,
    "errorCode": "NOT_ASSIGNED_PROPOSAL",
  },
}
`;

exports[`mutations.changeProposalAnalysis should successfully analyse the analysis with required responses to required questions 1`] = `
Object {
  "analyseProposalAnalysis": Object {
    "analysis": Object {
      "comment": "aled",
      "id": Any<String>,
      "responses": Array [
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": "",
        },
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": "",
        },
        Object {
          "formattedValue": "",
        },
        Object {
          "formattedValue": "",
        },
        Object {
          "formattedValue": "",
        },
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": null,
        },
        Object {
          "formattedValue": "42",
        },
        Object {
          "formattedValue": "12",
        },
      ],
      "state": "FAVOURABLE",
    },
    "errorCode": null,
  },
}
`;
